--- a/main.css
+++ b/main.css
@@ -1,85 +1,126 @@
-#main {
-  background-color: rgb(221, 221, 221);
-  margin: 0px;
-  font-family: "Oxygen", sans-serif;
+html {
+  font-size: 10px;
+  background: #e5e5e1;
 }
 
-#heading-wrapper {
+body {
+  font-family: "Oxygen", sans-serif;
+  font-size: 1.6rem;
+  line-height: 1.5;
   text-align: center;
+  color: #333;
+  margin: 0;
 }
 
 #title {
-  font-size: 9vh;
+  font-size: 5rem;
   font-family: "Great Vibes", cursive;
 }
 
-#title-citation {
+#main {
+  margin: 10px 8px;
+  padding: 15px;
+  border-radius: 5px;
+  font-family: "Oxygen", sans-serif;
+}
+
+#main-sect {
   font-style: italic;
-  font-size: 1rem;
-  margin-top: -4vh;
-  margin-bottom: 8vh;
-  color: #748995;
-  padding: 0 5vw;
+  color: rgba(106, 129, 158, 0.75);
+  margin-bottom: 2rem;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+  height: auto;
+  margin: 0 auto;
+  border-radius: 50%;
+  border: 2px solid #e5e5e1;
+  width: 50vh;
+  margin: 10px auto;
+  padding: 5px;
 }
 
 #img-div {
-  text-align: center;
-  background-color: rgb(229, 229, 225);
-  padding: 3rem 5vw;
-}
-
-#image {
-  border-radius: 50%;
-  border: 1.5px solid hsl(202, 13%, 52%);
-  width: 50vh;
-  max-width: 100%;
-  display: block;
-  align-self: center;
-  margin: 0 auto;
+  background: rgba(106, 129, 158, 0.15);
+  padding: 10px;
+  margin: 0;
+  border-radius: 5px;
 }
 
 #img-caption {
-  color: #888;
-  font-size: 2vh;
-  font-weight: 500;
+  margin: 15px 0;
+  color: #686d70;
 }
 
-#tribute-info {
-  display: flex;
-  flex-direction: column;
+#headline {
+  margin: 50px 0;
+  text-align: center;
 }
 
-.article-section {
-  min-height: 50vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+#info-sect {
+  text-align: start;
+  padding: 0 5rem 5rem;
 }
 
 ul {
-  margin: 0 0.5rem;
+  text-align: left;
+  line-height: 1.7;
+  margin: 0 5rem;
 }
 
-p {
-  margin: 2vh 2rem;
-  text-align: justify;
-  font-size: 2.2vh;
-  font-family: "Oxygen", sans-serif;
-  color: #888;
+li {
+  margin: 5rem 0;
 }
 
-h4 {
-  text-align: justify;
-  font-size: 2vh;
-  font-family: "Oxygen", sans-serif;
-  color: #888;
-  padding-bottom: 2rem;
-  margin: 2vh 1.5rem 2vh 0;
+#break {
+  margin-bottom: 3vh;
 }
 
-footer {
-  margin: 3em auto;
+blockquote {
   font-style: italic;
+  margin: 10rem 0;
   text-align: center;
+}
+
+.cite {
+  font-weight: bold;
+}
+
+#tribute-footer {
+  color: #477ca7cc;
+  padding-bottom: 3rem;
+}
+
+#tribute-link {
+  color: #648589;
+  text-decoration: none;
+}
+
+#tribute-link:hover {
+  color: #0080c0;
+}
+
+@media (max-width: 400px) {
+  #title {
+    font-size: 3.5rem;
+    line-height: 1.2;
+  }
+
+  #main {
+    margin: 0;
+  }
+
+  #img-caption {
+    font-size: 1.4rem;
+  }
+
+  #info-sect {
+    padding: 0 2.5rem 2rem;
+  }
+
+  ul {
+    margin: 0 2rem 0 0;
+  }
 }
